# oc-rs

./: .gitignore  Cargo.toml  README.md
models/: crnn_vgg16_bn.ort  db_mobilenet_v2.ort
src/: cli.rs  detector.rs  main.rs  recognizer.rs  utils.rs
