[package]
name = "oc-rs"
authors = ["pauloasjx"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
onnxruntime = "0.0.14"
opencv = { version = "0.68", default-features = false, features = [
    "imgproc",
    "imgcodecs",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
strip = true
lto = true
panic = 'abort'
